--- a/outreach/index.html
+++ b/outreach/index.html
@@ -25,8 +25,8 @@
 
 
             <h2>Trailer</h2>
-            <video controls width="250">
-                <source src="video.mp4" type="video/mp4">
+            <video controls width="500">
+                <source src="ThinkOutsideTheTrailer.mp4" type="video/mp4">
                 Sorry, your browser doesn't support embedded videos.
             </video>
 
